--- a/axu4j-egovframe/src/main/webapp/ui/cacao/admin.less
+++ b/axu4j-egovframe/src/main/webapp/ui/cacao/admin.less
@@ -148,6 +148,39 @@ a{
 		
 		.ax-logo{
 			position: absolute;
+			margin-top:6px;
+			z-index:1;
+			display: block;
+			a{
+				padding:0px 10px;
+				height:45px;
+				display: inline-block;
+				text-decoration: none;
+				
+				.logo-img{
+					display: block;float: left;
+					line-height: 45px;
+					height:45px;
+					vertical-align: middle;
+					i.axi{
+						color: @color-b;
+						font-size:35px;
+						line-height: 45px;
+					}
+				}
+				.logo-txt{
+					display: block;float: left;
+					padding:0px 5px;
+					color:@color-b;
+					vertical-align: middle;
+					text-decoration: none;
+					font-size:14px;
+					font-family: "Arial Black";
+					line-height: 45px;
+				}
+			}
+			
+			/*
 			line-height:45px;margin-top:8px;
 			a.logo-icon{
 				color: @color-b;
@@ -167,6 +200,7 @@ a{
 				vertical-align: middle;
 				text-decoration: underline;
 			}
+			*/
 		}
 
 		.ax-top-menu{
