--- a/axu4j-egovframe/src/main/webapp/ui/cocker/admin.less
+++ b/axu4j-egovframe/src/main/webapp/ui/cocker/admin.less
@@ -148,25 +148,38 @@ a{
 		opacity: 0.95;
 
 		.ax-logo{
+
 			position: absolute;
-			line-height:45px;margin-top:8px;
-			a.logo-icon{
-				color: @color-b;
-				text-decoration: none;
-				font-size:45px;
-				i.axi{
-					padding:5px;
-					font-size:35px;
-				}
-			}
-			img{
-				vertical-align: middle;
-				border:0px none;
-			}
+			margin-top:8px;
+			z-index:1;
+			display: block;
 			a{
-				color:@color;
-				vertical-align: middle;
-				text-decoration: underline;
+				padding:0px 10px;
+				height:45px;
+				display: inline-block;
+				text-decoration: none;
+
+				.logo-img{
+					display: block;float: left;
+					line-height: 45px;
+					height:45px;
+					vertical-align: middle;
+					i.axi{
+						color: @color-b;
+						font-size:35px;
+						line-height: 45px;
+					}
+				}
+				.logo-txt{
+					display: block;float: left;
+					padding:0px 5px;
+					color:@color;
+					vertical-align: middle;
+					text-decoration: none;
+					font-size:14px;
+					font-family: "Arial Black";
+					line-height: 45px;
+				}
 			}
 		}
 
