--- a/axu4j-egovframe/src/main/webapp/ui/cacao-dark/admin.less
+++ b/axu4j-egovframe/src/main/webapp/ui/cacao-dark/admin.less
@@ -147,26 +147,40 @@ a{
 		opacity: 0.95;
 		
 		.ax-logo{
+
 			position: absolute;
-			line-height:45px;margin-top:8px;
-			a.logo-icon{
-				color: #f3f3f3;
+			margin-top:5px;
+			z-index:1;
+			display: block;
+			a{
+				padding:0px 10px;
+				height:45px;
+				display: inline-block;
 				text-decoration: none;
-				font-size:45px;	
-				i.axi{
-					padding:5px;
-					font-size:35px;
+
+				.logo-img{
+					display: block;float: left;
+					line-height: 45px;
+					height:45px;
+					vertical-align: middle;
+					i.axi{
+						color: #fff;
+						font-size:35px;
+						line-height: 45px;
+					}
+				}
+				.logo-txt{
+					display: block;float: left;
+					padding:0px 5px;
+					color:#d0c3a8;
+					vertical-align: middle;
+					text-decoration: none;
+					font-size:14px;
+					font-family: "Arial Black";
+					line-height: 45px;
 				}
 			}
-            img{
-              vertical-align: middle;
-              border:0px none;
-            }
-			a{
-				color:#d0c3a8;
-				vertical-align: middle;
-				text-decoration: underline;
-			}
+
 		}
 
 		.ax-top-menu{
