--- a/axu4j-egovframe/src/main/webapp/ui/split.css
+++ b/axu4j-egovframe/src/main/webapp/ui/split.css
@@ -22,6 +22,7 @@ body {
   border: 1px solid #d9d9d9;
   border-radius: 7px;
   overflow: hidden;
+  box-sizing: border-box;
 }
 .AXSplit .cx-panel .p-line {
   line-height: 1px;
