--- a/axu4j-egovframe/src/main/webapp/ui/split.less
+++ b/axu4j-egovframe/src/main/webapp/ui/split.less
@@ -23,6 +23,7 @@ html, body{
 		height:100%;border: 1px solid #d9d9d9;
 		border-radius: 7px;
 		overflow: hidden;
+        box-sizing: border-box;
 
 		.p-line{
 			line-height: 1px;font-size: 1px;height:1px;background:#d9d9d9;
